# tickeys-toy

./: .gitignore  Cargo.toml  README.md  dump.rdb  hello.py  pyproject.toml  test.py
resource/: code_kv_map.json  kv_wav_map.json
src/: main.rs  my_play.rs  my_windows_hook.rs  vk.rs
src/types/: hoding_key.rs  key_event.rs  mod.rs
src/utils/: init.rs  key_to_audio.rs  mod.rs
