[package]
name = "tickeys_toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.windows]
version = "0.56.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = [
    "derive",
] }
anyhow = '1.0.82'
rodio = "0.17.3"
